--- a/client/src/i18n/locales/de/common/common.json
+++ b/client/src/i18n/locales/de/common/common.json
@@ -11,9 +11,36 @@
 	"buttons": {
 		"submit": "Einreichen",
 		"cancel": "Abbrechen",
+		"close": "Schließen",
+		"clear": "Löschen",
+		"reset": "Zurücksetzen",
+		"search": "Suche",
+		"filter": "Filter",
+		"refresh": "Aktualisieren",
+		"back": "Zurück",
+		"return": "Zurückkehren",
+		"next": "Weiter",
+		"previous": "Zurück",
+		"finish": "Fertigstellen",
+		"more": "Mehr",
+		"less": "Weniger",
+		"show": "Anzeigen",
+		"hide": "Ausblenden",
+		"enable": "Aktivieren",
+		"disable": "Deaktivieren",
+		"accept": "Akzeptieren",
+		"reject": "Abweisen",
+		"approve": "Genehmigen",
+		"disapprove": "Ablehnen",
+		"approveAll": "Alle genehmigen",
+		"disapproveAll": "Alle ablehnen",
+		"selectAll": "Alles auswählen",
+		"deselectAll": "Alles abwählen",
+		"expand": "Erweitern",
+		"collapse": "Reduzieren",
 		"save": "Speichern",
 		"delete": "Löschen",
-		"view": "Ansehen",
+		"view": "Anzeigen",
 		"edit": "Bearbeiten",
 		"add": "Hinzufügen",
 		"login": "Anmelden",
