--- a/client/src/i18n/locales/en/common/common.json
+++ b/client/src/i18n/locales/en/common/common.json
@@ -11,6 +11,33 @@
 	"buttons": {
 		"submit": "Submit",
 		"cancel": "Cancel",
+		"close": "Close",
+		"clear": "Clear",
+		"reset": "Reset",
+		"search": "Search",
+		"filter": "Filter",
+		"refresh": "Refresh",
+		"back": "Back",
+		"return": "Return",
+		"next": "Next",
+		"previous": "Previous",
+		"finish": "Finish",
+		"more": "More",
+		"less": "Less",
+		"show": "Show",
+		"hide": "Hide",
+		"enable": "Enable",
+		"disable": "Disable",
+		"accept": "Accept",
+		"reject": "Reject",
+		"approve": "Approve",
+		"disapprove": "Disapprove",
+		"approveAll": "Approve All",
+		"disapproveAll": "Disapprove All",
+		"selectAll": "Select All",
+		"deselectAll": "Deselect All",
+		"expand": "Expand",
+		"collapse": "Collapse",
 		"save": "Save",
 		"delete": "Delete",
 		"view": "View",
