--- a/client/src/i18n/locales/es/common/common.json
+++ b/client/src/i18n/locales/es/common/common.json
@@ -11,6 +11,33 @@
 	"buttons": {
 		"submit": "Enviar",
 		"cancel": "Cancelar",
+		"close": "Cerrar",
+		"clear": "Limpiar",
+		"reset": "Restablecer",
+		"search": "Buscar",
+		"filter": "Filtrar",
+		"refresh": "Actualizar",
+		"back": "Atrás",
+		"return": "Regresar",
+		"next": "Siguiente",
+		"previous": "Anterior",
+		"finish": "Finalizar",
+		"more": "Más",
+		"less": "Menos",
+		"show": "Mostrar",
+		"hide": "Ocultar",
+		"enable": "Activar",
+		"disable": "Desactivar",
+		"accept": "Aceptar",
+		"reject": "Rechazar",
+		"approve": "Aprobar",
+		"disapprove": "Desaprobar",
+		"approveAll": "Aprobar todo",
+		"disapproveAll": "Desaprobar todo",
+		"selectAll": "Seleccionar todo",
+		"deselectAll": "Deseleccionar todo",
+		"expand": "Expandir",
+		"collapse": "Colapsar",
 		"save": "Guardar",
 		"delete": "Eliminar",
 		"view": "Ver",
@@ -19,7 +46,7 @@
 		"login": "Iniciar sesión",
 		"logout": "Cerrar sesión",
 		"register": "Registrarse",
-		"forgotPassword": "¿Olvidó su contraseña?",
+		"forgotPassword": "Olvidé mi contraseña",
 		"resetPassword": "Restablecer contraseña",
 		"changePassword": "Cambiar contraseña"
 	},
