--- a/client/src/i18n/locales/fr/common/common.json
+++ b/client/src/i18n/locales/fr/common/common.json
@@ -11,6 +11,33 @@
 	"buttons": {
 		"submit": "Soumettre",
 		"cancel": "Annuler",
+		"close": "Fermer",
+		"clear": "Effacer",
+		"reset": "Réinitialiser",
+		"search": "Rechercher",
+		"filter": "Filtrer",
+		"refresh": "Actualiser",
+		"back": "Retour",
+		"return": "Retour",
+		"next": "Suivant",
+		"previous": "Précédent",
+		"finish": "Terminer",
+		"more": "Plus",
+		"less": "Moins",
+		"show": "Afficher",
+		"hide": "Masquer",
+		"enable": "Activer",
+		"disable": "Désactiver",
+		"accept": "Accepter",
+		"reject": "Rejeter",
+		"approve": "Approuver",
+		"disapprove": "Désapprouver",
+		"approveAll": "Approuver tout",
+		"disapproveAll": "Désapprouver tout",
+		"selectAll": "Sélectionner tout",
+		"deselectAll": "Désélectionner tout",
+		"expand": "Développer",
+		"collapse": "Réduire",
 		"save": "Enregistrer",
 		"delete": "Supprimer",
 		"view": "Voir",
