--- a/client/src/i18n/locales/ja/common/common.json
+++ b/client/src/i18n/locales/ja/common/common.json
@@ -9,17 +9,44 @@
 		"license": "MIT"
 	},
 	"buttons": {
-		"submit": "提出する",
+		"submit": "提出",
 		"cancel": "キャンセル",
+		"close": "閉じる",
+		"clear": "クリア",
+		"reset": "リセット",
+		"search": "検索",
+		"filter": "フィルター",
+		"refresh": "更新",
+		"back": "戻る",
+		"return": "戻る",
+		"next": "次へ",
+		"previous": "前へ",
+		"finish": "完了",
+		"more": "もっと",
+		"less": "少ない",
+		"show": "表示",
+		"hide": "非表示",
+		"enable": "有効化",
+		"disable": "無効化",
+		"accept": "承認",
+		"reject": "拒否",
+		"approve": "承認する",
+		"disapprove": "不承認",
+		"approveAll": "すべて承認する",
+		"disapproveAll": "すべて不承認",
+		"selectAll": "すべて選択",
+		"deselectAll": "すべて選択解除",
+		"expand": "展開",
+		"collapse": "折りたたむ",
 		"save": "保存",
 		"delete": "削除",
-		"view": "見る",
+		"view": "表示",
 		"edit": "編集",
-		"add": "追加する",
+		"add": "追加",
 		"login": "ログイン",
 		"logout": "ログアウト",
 		"register": "登録",
-		"forgotPassword": "パスワードをお忘れですか",
+		"forgotPassword": "パスワードを忘れました",
 		"resetPassword": "パスワードをリセット",
 		"changePassword": "パスワードを変更"
 	},
