--- a/client/src/i18n/locales/zh/common/common.json
+++ b/client/src/i18n/locales/zh/common/common.json
@@ -11,6 +11,33 @@
 	"buttons": {
 		"submit": "提交",
 		"cancel": "取消",
+		"close": "关闭",
+		"clear": "清除",
+		"reset": "重置",
+		"search": "搜索",
+		"filter": "筛选",
+		"refresh": "刷新",
+		"back": "返回",
+		"return": "返回",
+		"next": "下一个",
+		"previous": "上一个",
+		"finish": "完成",
+		"more": "更多",
+		"less": "更少",
+		"show": "显示",
+		"hide": "隐藏",
+		"enable": "启用",
+		"disable": "禁用",
+		"accept": "接受",
+		"reject": "拒绝",
+		"approve": "批准",
+		"disapprove": "不批准",
+		"approveAll": "全部批准",
+		"disapproveAll": "全部不批准",
+		"selectAll": "全选",
+		"deselectAll": "取消全选",
+		"expand": "展开",
+		"collapse": "折叠",
 		"save": "保存",
 		"delete": "删除",
 		"view": "查看",
