--- a/client/src/i18n/locales/de/values/employmentStatus.json
+++ b/client/src/i18n/locales/de/values/employmentStatus.json
@@ -1,15 +1,15 @@
 {
-	"fullTime": "Full-Time",
-	"partTime": "Part-Time",
-	"contract": "Contract",
-	"internship": "Internship",
-	"temporary": "Temporary",
-	"freelance": "Freelance",
-	"commission": "Commission",
-	"apprenticeship": "Apprenticeship",
-	"zeroHour": "Zero Hour",
-	"selfEmployed": "Self-Employed",
-	"volunteer": "Volunteer",
-	"seasonal": "Seasonal",
-	"other": "Other"
+	"fullTime": "Vollzeit",
+	"partTime": "Teilzeit",
+	"contract": "Vertrag",
+	"internship": "Praktikum",
+	"temporary": "Temporär",
+	"freelance": "Freiberuflich",
+	"commission": "Provision",
+	"apprenticeship": "Ausbildung",
+	"zeroHour": "Null-Stunden",
+	"selfEmployed": "Selbstständig",
+	"volunteer": "Freiwillig",
+	"seasonal": "Saisonal",
+	"other": "Andere"
 }
