--- a/client/src/i18n/locales/de/values/entities.json
+++ b/client/src/i18n/locales/de/values/entities.json
@@ -1,21 +1,21 @@
 {
 	"entityTypes": {
 		"person": "Person",
-		"organization": "Organization",
-		"other": "Other"
+		"organization": "Organisation",
+		"other": "Andere"
 	},
 	"businessLegalEntityTypes": {
-		"soleProprietorship": "Sole Proprietorship",
-		"partnership": "Partnership",
-		"llc": "Limited Liability Company (LLC)",
-		"corporation": "Corporation",
-		"nonprofitOrganization": "Nonprofit Organization"
+		"soleProprietorship": "Einzelunternehmen",
+		"partnership": "Partnerschaft",
+		"llc": "Gesellschaft mit beschränkter Haftung (GmbH)",
+		"corporation": "Kapitalgesellschaft",
+		"nonprofitOrganization": "Gemeinnützige Organisation"
 	},
 	"businessLegalStatus": {
-		"active": "Active",
-		"inactive": "Inactive",
-		"dissolved": "Dissolved",
-		"pending": "Pending",
-		"underInvestigation": "Under Investigation"
+		"active": "Aktiv",
+		"inactive": "Inaktiv",
+		"dissolved": "Aufgelöst",
+		"pending": "Ausstehend",
+		"underInvestigation": "Untersuchung läuft"
 	}
 }
