--- a/client/src/i18n/locales/fr/values/employmentStatus.json
+++ b/client/src/i18n/locales/fr/values/employmentStatus.json
@@ -1,15 +1,15 @@
 {
-	"fullTime": "Full-Time",
-	"partTime": "Part-Time",
-	"contract": "Contract",
-	"internship": "Internship",
-	"temporary": "Temporary",
+	"fullTime": "Temps plein",
+	"partTime": "Temps partiel",
+	"contract": "Contrat",
+	"internship": "Stage",
+	"temporary": "Temporaire",
 	"freelance": "Freelance",
 	"commission": "Commission",
-	"apprenticeship": "Apprenticeship",
-	"zeroHour": "Zero Hour",
-	"selfEmployed": "Self-Employed",
-	"volunteer": "Volunteer",
-	"seasonal": "Seasonal",
-	"other": "Other"
+	"apprenticeship": "Apprentissage",
+	"zeroHour": "Heures non garanties",
+	"selfEmployed": "Travailleur indépendant",
+	"volunteer": "Bénévole",
+	"seasonal": "Saisonnier",
+	"other": "Autre"
 }
