--- a/client/src/i18n/locales/ja/values/entities.json
+++ b/client/src/i18n/locales/ja/values/entities.json
@@ -1,21 +1,21 @@
 {
 	"entityTypes": {
-		"person": "Person",
-		"organization": "Organization",
-		"other": "Other"
+		"person": "個人",
+		"organization": "組織",
+		"other": "その他"
 	},
 	"businessLegalEntityTypes": {
-		"soleProprietorship": "Sole Proprietorship",
-		"partnership": "Partnership",
-		"llc": "Limited Liability Company (LLC)",
-		"corporation": "Corporation",
-		"nonprofitOrganization": "Nonprofit Organization"
+		"soleProprietorship": "個人事業主",
+		"partnership": "パートナーシップ",
+		"llc": "有限責任会社 (LLC)",
+		"corporation": "株式会社",
+		"nonprofitOrganization": "非営利組織"
 	},
 	"businessLegalStatus": {
-		"active": "Active",
-		"inactive": "Inactive",
-		"dissolved": "Dissolved",
-		"pending": "Pending",
-		"underInvestigation": "Under Investigation"
+		"active": "有効",
+		"inactive": "無効",
+		"dissolved": "解散済み",
+		"pending": "保留中",
+		"underInvestigation": "調査中"
 	}
 }
